# knowledge-graph-for-rag

./: .env.example  .gitignore  README.md  load_movies_data.py  pyproject.toml  visualize_network.py
linkedin_posts/: linkedin_post_2.txt
src/graph_rag/: l2-query-with-cypher.ipynb
src/graph_rag/SEC_dataset/: .env.example  add-relationships-to-kg.ipynb  construct-kg-from-text.ipynb  expanding-the-kg.ipynb
