[project]
name = "graph-rag"
version = "0.1.0"
description = "Add description here"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0,<1.0.0",
    "langchain-community>=0.0.1,<1.0.0",
    "langchain-openai>=0.3.35",
    "matplotlib>=3.8.0,<4.0.0",
    "neo4j>=5.0.0,<6.0.0",
    "networkx>=3.0.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
